fix(components): fix width calculation in MDEntityComponent crashing